package com.quevedo.virtualclassroomsserver.common.models.server.user;

import java.time.LocalDateTime;
import java.util.UUID;

public class UserVisualization {
    private String username;
    private UUID resource;
    private int visualizationTime;
    private LocalDateTime dateTime;
}
